# VM

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  main.cpp  velb_format.hexpat  xmake.lua
.github/workflows/: cmake-multi-platform.yml
doc/: CONTRIBUTING.md  DEPENDENCIES.md  github_work.md
examples_codes_vm/: ejemplo_align_section.vel  ejemplo_binario_crudo.vel  ejemplo_init_pc_con_seccion_anonima.vel  import_file.vel  test.vel  test1_import_align.vel  test_emmit1.vel  test_metadatos.vel  test_reflexion1.vel
include/arena/: TLB.h  VirtualMemory.h  arena.h  arena_manager.h
include/assembly/: assembly.h
include/bytecode/: bytecode.h
include/cli/: cli.h  cli_init_manager_and_server.h  runtime_api_commands.h  sync_io.h
include/controller/: request_router.h  socket_server.h  tls_connection.h  tls_context.h  vm_manager.h
include/emmit/: annotations.h  bytewriter.h  emmit_decl.h  parser_to_bytecode.h  struct_context.h
include/lexer/: lexer.h
include/linker/: velb_linker_bytecode.h
include/loader/: loader.h
include/net/: connection.h  net.h  tcp_server.h
include/optimizer/: optimizer.h
include/parser/: ast.h  parser.h
include/profiler/: timer.h
include/runtime/: manager_runtime.h  rflags.h  runtime.h  vm_address_space.h
include/util/: ThreadPool.h  fs_utils.h  sqlite_singleton.h
libs/SourceCode/json/: README.md
libs/Windows/OpenSSL-Win64/: changes.txt
linker_vm_libs/: spaces_address.vel
src/arena/: TLB.cpp  VirtualMemory.cpp  arena.cpp  arena_manager.cpp
src/assembly/: assembly.cpp
src/bytecode/: bytecode.cpp
src/cli/: cli.cpp  cli_init_manager_and_server.cpp  runtime_api_commands.cpp  sync_io.cpp
src/controller/: tls_connection.cpp  tls_context.cpp
src/emmit/: annotations.cpp  emmit_decl.cpp  helpers_emmit_parser_to_bytecode.cpp  parser_to_bytecode.cpp
src/lexer/: lexer.cpp
src/linker/: velb_linker_bytecode.c  velb_linker_bytecode.cpp
src/loader/: loader.cpp
src/net/: connection.cpp  net.cpp  tcp_server.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp  parserAnnotations.cpp  parserMath.cpp
src/runtime/: manager_runtime.cpp  runtime.cpp
src/util/: ThreadPool.cpp  sqlite_singleton.cpp
tests/: CMakeLists.txt
tests/arena/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
tests/assembly/: test1.cpp
tests/cli/: test1.cpp  test2.cpp
tests/ftxui/: test1.cpp  test2.cpp
tests/lexer/: test1.cpp
tests/linker/: test1.cpp
tests/net/: test1.cpp  test2.cpp
tests/runtime/: test1.cpp
tests/util/: test1.cpp  test2.cpp
xmake/: config_flags.lua
